Enum role {
  owner
  editor
  viewer
}

//　顧客リスト
Table Book {
  id uuid [pk]
  name varchar [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table Category {
  id uuid [pk]
  name varchar [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table Redial {
  id uuid [pk]
  user_id uuid [not null]
  date date [not null]
  time time
  created_at timestamptz [not null, default: `now()`]
}

//　顧客
Table Customer {
  id uuid [pk]
  book_id uuid [not null]
  category_id uuid
  job varchar 
  name varchar [not null]
  corporation varchar
  address varchar
  leader uuid [unique, note:"代表者"]
  pic uuid [unique, note:"担当者"]
  memo text
  created_at timestamptz [not null, default: `now()`]
}

Table Staff {
  id uuid [pk]
  name varchar
  sex varchar
  created_at timestamptz [not null, default: `now()`]
}

Table Contact {
  id uuid [pk]
  customer_id uuid [not null]
  staff_id uuid [unique, note:"これがnullの場合代表"]
  phone varchar [not null]
  mail varchar
  fax varchar
  created_at timestamptz [not null, default: `now()`]
}

Table Call {
  id uuid [pk]
  customer_id uuid [not null]
  user_id uuid [not null]
  status_id uuid
  created_at timestamptz [not null, default: `now()`]
}

Table Status {
  id uuid [pk]
  name varchar [not null]
  effective bool [note: "有効数としてカウントするか"]
  ng bool [note: "NG"]
  created_at timestamptz [not null, default: `now()`]
}

Table User {
  id uuid [pk]
  email varchar [not null]
  name varchar [not null]
  role role [not null]
  created_at timestamptz [not null, default: `now()`]
}

Ref: "Customer"."book_id" > "Book"."id" [delete: cascade, update: no action]

Ref: "Category"."id" < "Customer"."category_id"

Ref: "User"."id" < "Call"."user_id"

Ref: "Status"."id" < "Call"."status_id"

Ref: "Customer"."id" < "Call"."customer_id" [delete: cascade, update: no action]

Ref: "Staff"."id" - "Customer"."leader"

Ref: "Staff"."id" - "Customer"."pic"

Ref: "Contact"."staff_id" - "Staff"."id"

Ref: "Customer"."id" < "Contact"."customer_id"

Ref: "User"."id" < "Redial"."user_id"

Ref: "Customer"."id" - "Redial"."id"